# open-data-product-berlin-lor-geodata

./: .gitignore  README.md  data-product-manifest.yml  data-product.yml  data-transformation.yml  main.py  odps.yml  pyproject.toml  requirements.txt
data/berlin-lor-city/: berlin-lor-city.geojson
data/berlin-lor-district-regions-styles/: berlin-lor-district-regions-fill-marked.json  berlin-lor-district-regions-fill.json  berlin-lor-district-regions-from-2021-centroid-symbol-theme-dark.json  berlin-lor-district-regions-line-highlighted.json  berlin-lor-district-regions-line.json  berlin-lor-district-regions-until-2020-centroid-symbol-theme-dark.json  berlin-lor-district-regions-until-2020-centroid-symbol-theme-light.json
data/berlin-lor-district-regions-until-2020/: berlin-lor-district-regions-until-2020.geojson
data/berlin-lor-districts/: berlin-lor-districts.geojson
data/berlin-lor-districts-styles/: berlin-lor-districts-centroid-symbol-theme-dark.json  berlin-lor-districts-centroid-symbol-theme-light.json  berlin-lor-districts-fill-marked.json  berlin-lor-districts-fill.json  berlin-lor-districts-line-highlighted.json  berlin-lor-districts-line.json
data/berlin-lor-forecast-areas-from-2021/: berlin-lor-forecast-areas-from-2021.geojson
data/berlin-lor-forecast-areas-styles/: berlin-lor-forecast-areas-fill-marked.json  berlin-lor-forecast-areas-fill.json  berlin-lor-forecast-areas-from-2021-centroid-symbol-theme-dark.json  berlin-lor-forecast-areas-line-highlighted.json  berlin-lor-forecast-areas-line.json  (+1 more)
docs/: data-product-canvas.md  odps-canvas.md
(+26 files in other folders)
